# e-ink-display

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  base.h  key.pem  main.c  priv-key-nvs.csv
main/fonts/: segoevf_11.h
main/icons/: calendar.h  sun.h
main/ui/: ui.c  ui.h
main/ui/fonts/: segoevf_24.h  segoevf_8.h  segoevf_9.h
main/ui/icons/: arrow_down.h  arrow_up.h  battery.h  clock.h  weather_icons.h  weather_icons_large.h
main/ui/widgets/: forecast_base.h
main/utils/: button.c  button.h  json-parser.c  json_parser.c  json_parser.h  jwt_manager.c  jwt_manager.h  network_manager.c  network_manager.h  task_manager.c  task_manager.h  timezone_manager.c  timezone_manager.h
main/widgets/: today_base.h
